force-app/main/default/objects/pse__Billing_Event__c/fields/Billing_Event_Batch_Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Event_Batch_Time_Period__c</fullName>
    <formula>pse__Billing_Event_Batch__r.pse__Time_Period__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Event Batch Time Period</label>
    <type>Text</type>
</CustomField>