force-app/main/default/objects/pse__Billing_Event__c/fields/Netsuite_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Project_Name__c</fullName>
    <formula>pse__Project__r.pse__Account__r.Name + &quot; &quot; + &quot;:&quot; + &quot; &quot; +   pse__Project__r.pse__Opportunity__r.Opportunity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Project Name</label>
    <type>Text</type>
</CustomField>