force-app/main/default/objects/pse__Billing_Event__c/fields/pse__Billing_Event_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Event_Calculation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Event Calculation</label>
    <referenceTo>pse__Billing_Event_Calculation__c</referenceTo>
    <relationshipLabel>Billing Events</relationshipLabel>
    <relationshipName>Billing_Events</relationshipName>
    <type>Lookup</type>
</CustomField>