force-app/main/default/objects/pse__Billing_Event__c/fields/pse__Budget_Remaining__c.field-meta.xml
<CustomField>
    <fullName>pse__Budget_Remaining__c</fullName>
    <formula>pse__Project__r.pse__Bookings__c -  pse__Summary_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>