force-app/main/default/objects/pse__Billing_Event__c/fields/pse__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>