force-app/main/default/objects/pse__Billing_Event__c/fields/pse__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>pse__Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this billing event been invoiced?</description>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>