force-app/main/default/objects/pse__Billing_Event__c/fields/pse__Is_Released__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Released__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Released</label>
    <type>Checkbox</type>
</CustomField>