force-app/main/default/objects/pse__Billing_Event__c/fields/pse__Rounded_Summary_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Rounded_Summary_Amount__c</fullName>
    <label>Rounded Summary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>