force-app/main/default/objects/pse__Billing_Event__c/fields/pse__Skip_Sync_Check__c.field-meta.xml
<CustomField>
    <fullName>pse__Skip_Sync_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, do not check for out-of-sync billing event items on update of the Is_Released__c field. This should only be used by code, never shown to users.</description>
    <label>Skip Sync Check</label>
    <type>Checkbox</type>
</CustomField>