force-app/main/default/objects/pse__Billing_Event__c/listViews/Generated_Not_Released.listView-meta.xml
<ListView>
    <fullName>Generated_Not_Released</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>Billing_Event_Batch_Time_Period__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Is_Released__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Generated, Not Released</label>
    <language>en_US</language>
</ListView>