force-app/main/default/objects/pse__Billing_Event__c/listViews/Released_not_Invoiced.listView-meta.xml
<ListView>
    <fullName>Released_not_Invoiced</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Summary_Amount__c</columns>
    <columns>pse__Billing_Event_Batch__c</columns>
    <columns>pse__Budget_Remaining__c</columns>
    <columns>pse__Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Is_Released__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Invoiced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Released, not Invoiced</label>
    <language>en_US</language>
</ListView>